--- a/public/index.html
+++ b/public/index.html
@@ -63,7 +63,7 @@
       <div class="consent-header" onclick="loadAndToggleConsent('terms-of-use/voice.txt', this)">
         <input type="checkbox" class="essential" id="check2" onclick="event.stopPropagation()">
         <div class="header-text">
-          <span class="subject">음성정보 처리 동의</span>
+          <span class="subject">음성분석 처리 동의</span>
           <span class="badge">필수</span>
         </div>
         <span class="arrow">▼</span>
