연구참여동의

--- a/public/index.html
+++ b/public/index.html
@@ -79,7 +79,7 @@
   <div class="consent-header" onclick="loadAndToggleConsent('terms-of-use/qeeg.txt', this)">
     <input type="checkbox" id="checkQeeg" onclick="event.stopPropagation()">
     <div class="header-text">
-      <span class="subject">qEEG(뇌파) 자료 업로드 및 처리 동의</span>
+      <span class="subject">qEEG 업로드 및 처리 동의</span>
       <span class="badge select-badge">선택</span> </div>
     <span class="arrow">▼</span>
   </div>
