--- a/public/voice_test.html
+++ b/public/voice_test.html
@@ -39,7 +39,7 @@
     const STAGE4_Q = "노력을 해도 해결이 되지 않는다면 보통 어떻게 하나요?";
 
     const baseStages = [
-      { id: 1, q: "Stage 1", d: "위 지문을 편안하게 소리 내어 읽어주세요. (Baseline 측정)", text: STAGE1_TEXT },
+      { id: 1, q: "Stage 1", d: "위 지문을 편안하게 소리 내어 읽어주세요. 끝까지 읽지 않아도 됩니다. (Baseline 측정)", text: STAGE1_TEXT },
       { id: 4, q: "Stage 4", d: "", text: STAGE4_Q }
     ];
 
