--- a/public/voice_test.html
+++ b/public/voice_test.html
@@ -17,6 +17,12 @@
     setRecordButtonState
   } from "./voice-ui.js";
 
+ const API_BASE = localStorage.getItem("API_BASE") || "";
+const url = API_BASE
+  ? API_BASE.replace(/\/$/, "") + "/submit-voice-stage"
+  : "/submit-voice-stage";
+
+
   // ====== Stage 설계 ======
   function getStagesByAge(age) {
     const isUnder14 = age < 14;
