중복코드 삭제

--- a/public/voice_test.html
+++ b/public/voice_test.html
@@ -120,96 +120,94 @@ function renderStage() {
     if (recBtn) recBtn.dataset.recording = "0";
   }
 
-  // ====== 녹음 실행 함수 ======
-  async function runVoiceStage() {
-    const recBtn = document.querySelector("#recordBtn");
-    const finishBtn = document.getElementById("finishBtn");
+async function runVoiceStage() {
+  const recBtn = document.querySelector("#recordBtn");
+  const finishBtn = document.getElementById("finishBtn");
 
-    try {
-      // 1. 소음 측정 (캘리브레이션)
-      setRecordButtonState({ recording: false, calibrating: true });
-      await vp.calibrateSilence(2);
+  try {
+    // 0) 현재 stage를 먼저 잡아둠(중요)
+    const s = STAGES[stageIdx];
 
-      // 2. 녹음 시작 UI 전환
-      setRecordButtonState({ recording: true, calibrating: false });
-      if (recBtn) recBtn.dataset.recording = "1";
+    // 1) 캘리브레이션
+    setRecordButtonState({ recording: false, calibrating: true });
+    await vp.calibrateSilence(2);
 
-      if (finishBtn) {
-        finishBtn.style.display = "inline-block";
-        finishBtn.onclick = () => {
-          vp.stop(); // 조기 종료
-          finishBtn.style.display = "none";
-        };
-      }
+    // 2) 녹음 시작 UI
+    setRecordButtonState({ recording: true, calibrating: false });
+    if (recBtn) recBtn.dataset.recording = "1";
 
-      // 3. 실제 녹음 프로세스
-      const metrics = await vp.startStage({
-        durationSec: 40,
-        onTick: ({ leftMs }) => setTimer(leftMs, 40)
-      });
-
-      console.log("Stage Metrics:", metrics);
-
-            // ✅ DB 전송(POST) — metrics 나온 직후
-      const sid = getSid();
-      const s = STAGES[stageIdx]; // 지금 stage(증가 전)
-      const age = parseInt(localStorage.getItem("rhythmi_age") || "0", 10);
-      const age_group = age < 14 ? "under14" : (age < 19 ? "child" : "adult");
-
-      const payload = {
-        session_id: sid,
-        stage_id: s?.id ?? null,
-        age_group,
-        status: metrics?.status || "completed",
-
-        recorded_ms: metrics?.recorded_ms ?? 0,
-        speech_rate: metrics?.speech_rate ?? null,
-        pause_ratio: metrics?.pause_ratio ?? null,
-        pitch_mean: metrics?.pitch_mean ?? null,
-        pitch_sd: metrics?.pitch_sd ?? null,
-        snr_est_db: metrics?.snr_est_db ?? null,
-        clipping_ratio: metrics?.clipping_ratio ?? null,
-
-        long_pause_count_600ms: metrics?.long_pause_count_600ms ?? null,
-        short_pause_count_200_600ms: metrics?.short_pause_count_200_600ms ?? null,
-        pause_ms: metrics?.pause_ms ?? null,
-        restart_rms_spike_count: metrics?.restart_rms_spike_count ?? null,
+    if (finishBtn) {
+      finishBtn.style.display = "inline-block";
+      finishBtn.onclick = () => {
+        vp.stop(); // 조기 종료
+        finishBtn.style.display = "none";
       };
-
-      // ✅ API URL 결정: window.API 있으면 그걸 쓰고, 없으면 상대경로 사용
-      // ✅ API URL 결정: localStorage API_BASE가 있으면 Cloud Run으로, 없으면 상대경로(=404날 수 있음)
-const API_BASE_NOW = localStorage.getItem("API_BASE") || "";
-const url = API_BASE_NOW
-  ? API_BASE_NOW.replace(/\/$/, "") + "/submit-voice-stage"
-  : "/submit-voice-stage";
-
-console.log("SUBMIT 직전", url, payload);
-
-const res = await fetch(url, {
-  method: "POST",
-  headers: { "Content-Type": "application/json" },
-  body: JSON.stringify(payload),
-});
-
-
-      console.log("SUBMIT 응답", res.status);
-      if (!res.ok) {
-        const t = await res.text();
-        console.log("SUBMIT body", t);
-        throw new Error(`submit failed ${res.status}: ${t}`);
-      }
-
-
-      // 4. 종료 처리 및 다음 스테이지
-      stageIdx += 1;
-      renderStage();
-
-    } catch (err) {
-      console.error("녹음 중 오류 발생:", err);
-      alert("마이크 연결을 확인해주세요.");
-      setRecordButtonState({ recording: false, calibrating: false });
     }
+
+    const metrics = await vp.startStage({
+      durationSec: 40,
+      onTick: ({ leftMs }) => setTimer(leftMs, 40)
+    });
+
+    console.log("Stage Metrics:", metrics);
+
+    // 3) POST 준비
+    const sid = getSid();
+    const age = parseInt(localStorage.getItem("rhythmi_age") || "0", 10);
+    const age_group = age < 14 ? "under14" : (age < 19 ? "child" : "adult");
+
+    const url = apiUrl("/submit-voice-stage");
+
+    const payload = {
+      session_id: sid,
+      stage_id: s?.id ?? null,
+      age_group,
+      status: metrics?.status || "completed",
+
+      start_latency_ms: 0,
+      stop_offset_ms: metrics?.recorded_ms ?? 40000,
+      jitter: 0,
+      shimmer: 0,
+
+      recorded_ms: metrics?.recorded_ms ?? 0,
+      speech_rate: metrics?.speech_rate ?? null,
+      pause_ratio: metrics?.pause_ratio ?? null,
+      pitch_mean: metrics?.pitch_mean ?? null,
+      pitch_sd: metrics?.pitch_sd ?? null,
+      snr_est_db: metrics?.snr_est_db ?? null,
+      clipping_ratio: metrics?.clipping_ratio ?? null,
+
+      long_pause_count_600ms: metrics?.long_pause_count_600ms ?? null,
+      short_pause_count_200_600ms: metrics?.short_pause_count_200_600ms ?? null,
+      pause_ms: metrics?.pause_ms ?? null,
+      restart_rms_spike_count: metrics?.restart_rms_spike_count ?? null,
+    };
+
+    console.log("SUBMIT 직전", url, payload);
+
+    const res = await fetch(url, {
+      method: "POST",
+      headers: { "Content-Type": "application/json" },
+      body: JSON.stringify(payload),
+    });
+
+    console.log("SUBMIT 응답", res.status);
+    if (!res.ok) {
+      const t = await res.text();
+      console.log("SUBMIT body", t);
+      throw new Error(`submit failed ${res.status}: ${t}`);
+    }
+
+    // 4) 다음 스테이지로
+    stageIdx += 1;
+    renderStage();
+
+  } catch (err) {
+    console.error("녹음 중 오류 발생:", err);
+    alert("마이크 연결을 확인해주세요.");
+    setRecordButtonState({ recording: false, calibrating: false });
   }
+}
 
   // ====== 이벤트 초기화 (딱 한 번만 실행) ======
   document.addEventListener("DOMContentLoaded", () => {
