--- a/public/voice_test.html
+++ b/public/voice_test.html
@@ -7,28 +7,49 @@
     <title>음성 분석</title>
 </head>
 <script type="module">
-   
   import { VoiceProcessor } from "./voice-processor.js";
   import {
-    initStageUI,
     setQuestionText,
     setDescriptionText,
     setTimer,
     setRecordButtonState
   } from "./voice-ui.js";
- 
- 
+
+  // ---------------------------
+  // API helper
+  // ---------------------------
   function apiUrl(path) {
-  const base = localStorage.getItem("API_BASE") || "";
-  return base ? base.replace(/\/$/, "") + path : path;
-}
+    const base = localStorage.getItem("API_BASE") || "";
+    return base ? base.replace(/\/$/, "") + path : path;
+  }
 
-const url = apiUrl("/submit-voice-stage");
+  // ---------------------------
+  // Session helper
+  // ---------------------------
+  function getSid() {
+    const urlSid = new URLSearchParams(location.search).get("sid");
+    const storeSid = localStorage.getItem("SESSION_ID");
+    const winSid = window.SESSION_ID;
 
+    let sid = urlSid || storeSid || winSid;
 
-  // ====== Stage 설계 ======
+    if (!sid) {
+      sid = (crypto?.randomUUID)
+        ? crypto.randomUUID()
+        : `sid_${Date.now()}_${Math.random().toString(16).slice(2)}`;
+    }
+
+    window.SESSION_ID = sid;
+    localStorage.setItem("SESSION_ID", sid);
+    return sid;
+  }
+
+  // ---------------------------
+  // Stage 설계
+  // ---------------------------
   function getStagesByAge(age) {
     const isUnder14 = age < 14;
+
     const STAGE1_TEXT = `지금 나는 내 음성에 귀를 기울인다. 글을 소리 내어 읽을 때는 세 가지를 지킨다.
 첫째, 쉼표에서는 잠깐 쉰다. 
 둘째, 마침표에서는 숨을 고른다. 
@@ -70,39 +91,26 @@ const url = apiUrl("/submit-voice-stage");
     ];
   }
 
-  // ====== 상태 및 인스턴스 ======
+  // ---------------------------
+  // 상태
+  // ---------------------------
   const vp = new VoiceProcessor();
   let stageIdx = 0;
   let STAGES = [];
 
-function getSid() {
-  const urlSid = new URLSearchParams(location.search).get("sid");
-  const storeSid = localStorage.getItem("SESSION_ID");
-  const winSid = window.SESSION_ID;
+  // ---------------------------
+  // 렌더
+  // ---------------------------
+  function renderStage() {
+    const s = STAGES[stageIdx];
 
-  let sid = urlSid || storeSid || winSid;
+    // 완료 → done.html (sid 유지)
+    if (!s) {
+      const sid = getSid();
+      location.href = sid ? `./done.html?sid=${encodeURIComponent(sid)}` : "./done.html";
+      return;
+    }
 
-  // ✅ 없으면 생성
-  if (!sid) {
-    sid = (crypto?.randomUUID ? crypto.randomUUID() : `sid_${Date.now()}_${Math.random().toString(16).slice(2)}`);
-  }
-
-  window.SESSION_ID = sid;
-  localStorage.setItem("SESSION_ID", sid);
-  return sid;
-}
-
-
-
-  // ====== 렌더링 함수 ======
-function renderStage() {
-const s = STAGES[stageIdx];
-  // ✅ 모든 스테이지 완료 → done.html로 sid 붙여 이동 (모달 없음)
-  if (!s) {
-    const sid = getSid();
-    location.href = sid ? `./done.html?sid=${encodeURIComponent(sid)}` : "./done.html";
-    return;
-  }
     const badge = document.getElementById("stageBadge");
     if (badge) badge.innerText = `Stage ${s.id}`;
 
@@ -114,110 +122,130 @@ const s = STAGES[stageIdx];
 
     const finishBtn = document.getElementById("finishBtn");
     if (finishBtn) finishBtn.style.display = "none";
-    
-    // 버튼 중복 클릭 방지 해제
+
     const recBtn = document.querySelector("#recordBtn");
     if (recBtn) recBtn.dataset.recording = "0";
   }
 
-async function runVoiceStage() {
-  const recBtn = document.querySelector("#recordBtn");
-  const finishBtn = document.getElementById("finishBtn");
+  // ---------------------------
+  // 녹음 + 전송
+  // ---------------------------
+  async function runVoiceStage() {
+    const recBtn = document.querySelector("#recordBtn");
+    const finishBtn = document.getElementById("finishBtn");
 
-  try {
-    // 0) 현재 stage를 먼저 잡아둠(중요)
-    const s = STAGES[stageIdx];
+    try {
+      const s = STAGES[stageIdx];
+      if (!s) return;
 
-    // 1) 캘리브레이션
-    setRecordButtonState({ recording: false, calibrating: true });
-    await vp.calibrateSilence(2);
+      // age_group (여기서 확정해서 payload에 넣음)
+      const age = parseInt(localStorage.getItem("rhythmi_age") || "0", 10);
+      const age_group = age < 14 ? "under14" : (age < 19 ? "child" : "adult");
 
-    // 2) 녹음 시작 UI
-    setRecordButtonState({ recording: true, calibrating: false });
-    if (recBtn) recBtn.dataset.recording = "1";
+      // 1) 캘리브레이션
+      setRecordButtonState({ recording: false, calibrating: true });
+      await vp.calibrateSilence(2);
 
-    if (finishBtn) {
-      finishBtn.style.display = "inline-block";
-      finishBtn.onclick = () => {
-        vp.stop(); // 조기 종료
-        finishBtn.style.display = "none";
+      // 2) 녹음 시작 UI
+      setRecordButtonState({ recording: true, calibrating: false });
+      if (recBtn) recBtn.dataset.recording = "1";
+
+      // 3) 조기종료 버튼
+      if (finishBtn) {
+        finishBtn.style.display = "inline-block";
+        finishBtn.onclick = () => {
+          // stop()이 없는 버전이 로드되어도 안 터지게
+          if (typeof vp.stop === "function") vp.stop();
+          else vp._stopped = true; // voice-processor 내부 플래그(있을 때만 작동)
+          finishBtn.style.display = "none";
+        };
+      }
+
+      // 4) 녹음
+      const metrics = await vp.startStage({
+        durationSec: 40,
+        onTick: ({ leftMs }) => setTimer(leftMs, 40)
+      });
+
+      console.log("Stage Metrics:", metrics);
+
+      // 5) 서버 전송
+      const sid = getSid();
+
+      const payload = {
+        session_id: sid,
+        stage_id: s.id,
+        age_group: age_group,
+        status: metrics.status,
+
+        recorded_ms: metrics.recorded_ms,
+        speech_rate: metrics.speech_rate,
+        pause_ratio: metrics.pause_ratio,
+        pitch_mean: metrics.pitch_mean,
+        pitch_sd: metrics.pitch_sd,
+        snr_est_db: metrics.snr_est_db,
+        clipping_ratio: metrics.clipping_ratio,
+
+        long_pause_count_600ms: metrics.long_pause_count_600ms,
+        short_pause_count_200_600ms: metrics.short_pause_count_200_600ms,
+        pause_ms: metrics.pause_ms,
+        restart_rms_spike_count: metrics.restart_rms_spike_count,
+
+        // 서버 필수 필드(임시값)
+        start_latency_ms: 0,
+        stop_offset_ms: metrics.recorded_ms ?? 40000,
+        jitter: 0,
+        shimmer: 0,
       };
+
+      const url = apiUrl("/submit-voice-stage");
+      console.log("SUBMIT 직전", url, payload);
+
+      const res = await fetch(url, {
+        method: "POST",
+        headers: { "Content-Type": "application/json" },
+        body: JSON.stringify(payload),
+      });
+
+      const bodyText = await res.text();
+      console.log("SUBMIT 응답", res.status, bodyText);
+
+      if (!res.ok) {
+        // 마이크 오류가 아니라 "전송/서버" 오류로 보여야 함
+        throw new Error(`submit failed ${res.status}: ${bodyText}`);
+      }
+
+      // 6) 다음 stage
+      stageIdx += 1;
+      renderStage();
+
+    } catch (err) {
+      console.error("오류:", err);
+      alert("녹음/전송 중 오류가 발생했습니다. 콘솔 로그를 확인해주세요.");
+      setRecordButtonState({ recording: false, calibrating: false });
+
+      const recBtn = document.querySelector("#recordBtn");
+      if (recBtn) recBtn.dataset.recording = "0";
     }
-
-    const metrics = await vp.startStage({
-      durationSec: 40,
-      onTick: ({ leftMs }) => setTimer(leftMs, 40)
-    });
-
-    console.log("Stage Metrics:", metrics);
-
-    // 3) POST 준비
-    const sid = getSid();
-  const payload = {
-    session_id: sid,
-    stage_id: s.id,
-    age_group,                // 너가 정한 텍스트 OK
-    status: metrics.status,
-
-    recorded_ms: metrics.recorded_ms,
-    speech_rate: metrics.speech_rate,
-    pause_ratio: metrics.pause_ratio,
-    pitch_mean: metrics.pitch_mean,
-    pitch_sd: metrics.pitch_sd,
-    snr_est_db: metrics.snr_est_db,
-    clipping_ratio: metrics.clipping_ratio,
-
-    long_pause_count_600ms: metrics.long_pause_count_600ms,
-    short_pause_count_200_600ms: metrics.short_pause_count_200_600ms,
-    pause_ms: metrics.pause_ms,
-    restart_rms_spike_count: metrics.restart_rms_spike_count,
-
-    // 서버가 필수로 요구해서 422 뜬 것들 (일단 0으로 채움)
-    start_latency_ms: 0,
-    stop_offset_ms: metrics.recorded_ms ?? 40000,
-    jitter: 0,
-    shimmer: 0,
-  };
-
-  const url = apiUrl("/submit-voice-stage");
-  const res = await fetch(url, {
-    method: "POST",
-    headers: { "Content-Type": "application/json" },
-    body: JSON.stringify(payload),
-  });
-
-  if (!res.ok) throw new Error(await res.text());
-
-  stageIdx += 1;
-  renderStage();
-
-
-  } catch (err) {
-    console.error("녹음 중 오류 발생:", err);
-    alert("마이크 연결을 확인해주세요.");
-    setRecordButtonState({ recording: false, calibrating: false });
   }
-}
 
-  // ====== 이벤트 초기화 (딱 한 번만 실행) ======
+  // ---------------------------
+  // 초기화
+  // ---------------------------
   document.addEventListener("DOMContentLoaded", () => {
-    // 1. 연령 정보 로드 및 스테이지 설정
     const age = parseInt(localStorage.getItem("rhythmi_age") || "20", 10);
     STAGES = getStagesByAge(age);
     renderStage();
 
-    // 2. 녹음 버튼 이벤트 연결
     const recBtn = document.querySelector("#recordBtn");
     if (recBtn) {
       recBtn.addEventListener("click", () => {
-        // 이미 녹음 중이 아닐 때만 실행
-        if (recBtn.dataset.recording !== "1") {
-          runVoiceStage();
-        }
+        if (recBtn.dataset.recording !== "1") runVoiceStage();
       });
     }
   });
 </script>
+
 <body>
     <div class="container">
         <div class="progress-container">
