--- a/public/voice_test.html
+++ b/public/voice_test.html
@@ -8,12 +8,7 @@
 </head>
 <script type="module">
   import { VoiceProcessor } from "./voice-processor.js";
-  import {
-    setQuestionText,
-    setDescriptionText,
-    setTimer,
-    setRecordButtonState
-  } from "./voice-ui.js";
+  import { setQuestionText, setDescriptionText, setTimer, setRecordButtonState } from "./voice-ui.js";
 
   // ---------------------------
   // API helper
@@ -24,7 +19,7 @@
   }
 
   // ---------------------------
-  // Session helper
+  // Session helper (단일 진실)
   // ---------------------------
   function getSid() {
     const urlSid = new URLSearchParams(location.search).get("sid");
@@ -41,6 +36,63 @@
 
     window.SESSION_ID = sid;
     localStorage.setItem("SESSION_ID", sid);
+    return sid;
+  }
+
+  // ---------------------------
+  // Progress (테스트 이어하기/초기화)
+  // ---------------------------
+  const ALLOW_RESUME = false;          // 운영모드: false 추천(항상 처음부터)
+  const MAX_IDLE_MS = 15 * 60 * 1000;  // resume 허용 시, 15분 이상 비면 새로
+
+  function progressKey(sid) { return `rh_progress_${sid}`; }
+  function idleKey(sid) { return `rh_last_${sid}`; }
+
+  function loadProgress(sid) {
+    try { return JSON.parse(localStorage.getItem(progressKey(sid)) || "null"); }
+    catch { return null; }
+  }
+  function saveProgress(sid, data) {
+    localStorage.setItem(progressKey(sid), JSON.stringify(data));
+    localStorage.setItem(idleKey(sid), String(Date.now()));
+  }
+  function clearProgress(sid) {
+    localStorage.removeItem(progressKey(sid));
+    localStorage.removeItem(idleKey(sid));
+  }
+
+  function startNewRun() {
+    const oldSid = localStorage.getItem("SESSION_ID");
+    if (oldSid) clearProgress(oldSid);
+
+    const sid = (crypto?.randomUUID)
+      ? crypto.randomUUID()
+      : `sid_${Date.now()}_${Math.random().toString(16).slice(2)}`;
+
+    localStorage.setItem("SESSION_ID", sid);
+    window.SESSION_ID = sid;
+
+    stageIdx = 0;
+    saveProgress(sid, { stageIdx: 0, startedAt: Date.now() });
+    return sid;
+  }
+
+  function bootstrapRun() {
+    const sid = getSid();
+    const last = Number(localStorage.getItem(idleKey(sid)) || "0");
+    const idle = Date.now() - last;
+    const p = loadProgress(sid);
+
+    if (!ALLOW_RESUME) {
+      return startNewRun();
+    }
+
+    if (!p || idle > MAX_IDLE_MS) {
+      return startNewRun();
+    }
+
+    stageIdx = p.stageIdx ?? 0;
+    localStorage.setItem(idleKey(sid), String(Date.now()));
     return sid;
   }
 
@@ -98,20 +150,17 @@
   let stageIdx = 0;
   let STAGES = [];
 
-
-// ✅ DEV DEBUG: 콘솔에서 보기용(나중에 지워도 됨)
-window.__rh = {
-  get stageIdx() { return stageIdx; },
-  get STAGES() { return STAGES; },
-  get currStage() { return STAGES?.[stageIdx]; },
-  vp,
-  VoiceProcessor,
-  getSid,
-  apiUrl,
-};
-console.log("[DBG] __rh ready", window.__rh);
-
-
+  // DEV DEBUG (콘솔 확인용)
+  window.__rh = {
+    get stageIdx() { return stageIdx; },
+    get STAGES() { return STAGES; },
+    get currStage() { return STAGES?.[stageIdx]; },
+    vp,
+    VoiceProcessor,
+    getSid,
+    apiUrl,
+  };
+  console.log("[DBG] __rh ready", window.__rh);
 
   // ---------------------------
   // 렌더
@@ -119,7 +168,6 @@ console.log("[DBG] __rh ready", window.__rh);
   function renderStage() {
     const s = STAGES[stageIdx];
 
-    // 완료 → done.html (sid 유지)
     if (!s) {
       const sid = getSid();
       location.href = sid ? `./done.html?sid=${encodeURIComponent(sid)}` : "./done.html";
@@ -153,7 +201,7 @@ console.log("[DBG] __rh ready", window.__rh);
       const s = STAGES[stageIdx];
       if (!s) return;
 
-      // age_group (여기서 확정해서 payload에 넣음)
+      const sid = getSid();
       const age = parseInt(localStorage.getItem("rhythmi_age") || "0", 10);
       const age_group = age < 14 ? "under14" : (age < 19 ? "child" : "adult");
 
@@ -165,13 +213,12 @@ console.log("[DBG] __rh ready", window.__rh);
       setRecordButtonState({ recording: true, calibrating: false });
       if (recBtn) recBtn.dataset.recording = "1";
 
-      // 3) 조기종료 버튼
+      // 3) 조기 종료 버튼
       if (finishBtn) {
         finishBtn.style.display = "inline-block";
         finishBtn.onclick = () => {
-          // stop()이 없는 버전이 로드되어도 안 터지게
           if (typeof vp.stop === "function") vp.stop();
-          else vp._stopped = true; // voice-processor 내부 플래그(있을 때만 작동)
+          else vp._stopped = true; // stop() 없을 때도 최소한 멈추게
           finishBtn.style.display = "none";
         };
       }
@@ -185,12 +232,10 @@ console.log("[DBG] __rh ready", window.__rh);
       console.log("Stage Metrics:", metrics);
 
       // 5) 서버 전송
-      const sid = getSid();
-
       const payload = {
         session_id: sid,
         stage_id: s.id,
-        age_group: age_group,
+        age_group,
         status: metrics.status,
 
         recorded_ms: metrics.recorded_ms,
@@ -226,9 +271,14 @@ console.log("[DBG] __rh ready", window.__rh);
       console.log("SUBMIT 응답", res.status, bodyText);
 
       if (!res.ok) {
-        // 마이크 오류가 아니라 "전송/서버" 오류로 보여야 함
         throw new Error(`submit failed ${res.status}: ${bodyText}`);
       }
+
+      // ✅ POST 성공 직후 진행상태 저장
+      saveProgress(sid, {
+        stageIdx: stageIdx + 1,
+        startedAt: loadProgress(sid)?.startedAt ?? Date.now()
+      });
 
       // 6) 다음 stage
       stageIdx += 1;
@@ -237,10 +287,10 @@ console.log("[DBG] __rh ready", window.__rh);
     } catch (err) {
       console.error("오류:", err);
       alert("녹음/전송 중 오류가 발생했습니다. 콘솔 로그를 확인해주세요.");
-      setRecordButtonState({ recording: false, calibrating: false });
 
-      const recBtn = document.querySelector("#recordBtn");
-      if (recBtn) recBtn.dataset.recording = "0";
+      setRecordButtonState({ recording: false, calibrating: false });
+      const recBtn2 = document.querySelector("#recordBtn");
+      if (recBtn2) recBtn2.dataset.recording = "0";
     }
   }
 
@@ -250,6 +300,8 @@ console.log("[DBG] __rh ready", window.__rh);
   document.addEventListener("DOMContentLoaded", () => {
     const age = parseInt(localStorage.getItem("rhythmi_age") || "20", 10);
     STAGES = getStagesByAge(age);
+
+    bootstrapRun(); // stageIdx/SESSION_ID 정리
     renderStage();
 
     const recBtn = document.querySelector("#recordBtn");
