voice processor v=2로 변경

--- a/public/voice_test.html
+++ b/public/voice_test.html
@@ -7,7 +7,7 @@
     <title>음성 분석</title>
 </head>
 <script type="module">
-  import { VoiceProcessor } from "./voice-processor.js";
+  import { VoiceProcessor } from "./voice-processor.js?v=2";
   import { setQuestionText, setDescriptionText, setTimer, setRecordButtonState } from "./voice-ui.js";
 
   // ---------------------------
