--- a/public/report.html
+++ b/public/report.html
@@ -29,19 +29,20 @@
       return sid;
     }
 
-    const sid = getSid(); // ✅ report 진입 즉시 체크
+    document.addEventListener("DOMContentLoaded", () => {
+      const sid = getSid(); // ✅ report 진입 즉시 체크
+      if (!sid) return;
 
- document.getElementById("goSurveyBtn")?.addEventListener("click", () => {
-    const sid = getSid();
-    if (!sid) return;
-    location.href = `./survey.html?sid=${encodeURIComponent(sid)}`;
-  });
-
-
+      document.getElementById("goSurveyBtn").addEventListener("click", () => {
+        const sid2 = getSid();
+        if (!sid2) return;
+        location.href = `./survey.html?sid=${encodeURIComponent(sid2)}`;
+      });
+    });
   </script>
 </head>
 
 <body>
- <button id="goSurveyBtn">설문 계속하기</button>
+  <button id="goSurveyBtn">설문 계속하기</button>
 </body>
 </html>
