전체 순서 나오게 재정렬

--- a/public/index.html
+++ b/public/index.html
@@ -181,9 +181,7 @@
 
 <button type="button" id="uploadBtn" class="next-btn" onclick="submitAll(event)">데이터 전송</button>
 
-<button type="button" id="nextStepBtn" class="next-btn secondary-btn"
-  onclick="location.href='voice_info.html'"
-  style="display:none;">
+<button type="button" id="nextStepBtn" class="next-btn secondary-btn" style="display:none;">
   음성분석 이어하기
 </button>
 
