모든 스텝 다 밟기

--- a/public/index.html
+++ b/public/index.html
@@ -134,7 +134,7 @@
         <div class="chip" onclick="toggleDiagnosis(this, 'None')">해당 없음</div>
     </div>
 
-    <button class="next-btn" style="margin-top: 40px;" onclick="validateStep4()">체계화 지수 SQ 테스트 시작</button>
+    <button class="next-btn" style="margin-top: 40px;" onclick="startSQTest()">체계화 지수 SQ 테스트 시작</button>
 </section>
 
     <section id="step4" class="step">
