--- a/public/index.html
+++ b/public/index.html
@@ -153,8 +153,9 @@
    <section id="step5" class="step">
     <h3 class="title">qEEG 업로드</h3>
     <p class="description">
-        보유하신 파일을 업로드해 주세요. EC와 EO는 오른쪽 상단에 표기되어 있습니다. 
-        잘 모르시거나 한 장만 보유하고 있다면 아무 곳에나 올려주세요. (선택사항)
+        EC와 EO는 오른쪽 상단에 표기되어 있습니다. 
+        잘 모르시거나 한 장만 보유하고 있다면 아무 곳에나 올려주세요.(선택사항)
+        보조지표로 사용되므로 없으셔도 무방합니다.
     </p>
     
     <div class="upload-unit">
