중단하기 버튼 없앰

--- a/public/voice_info.html
+++ b/public/voice_info.html
@@ -121,6 +121,9 @@
             
             <label class="label">소음 감지 후 시작 </label>
                 <p class="description">버튼을 누르시고 2초 후에 시작해 주세요.</p>
+
+                  <label class="label">40초간 녹음</label>
+                <p class="description">40초 이후 다음 화면으로 넘어갑니다.</p>
             
             </div>
 
