--- a/public/report.html
+++ b/public/report.html
@@ -8,7 +8,7 @@
 </head>
 
 <body>
-  <h2>🎙️ 음성 리포트</h2>
+  <h2> 음성 리포트</h2>
   <div class="muted" id="meta"></div>
 
   <div class="row" id="cards"></div>
